syntax = "proto3";

import "protocol/protocol.proto";

package atomix.partitions;

option java_package = "io.atomix.grpc.partitions";
option java_multiple_files = true;

message PartitionGroup {
    string type = 1;
    string name = 2;
    int32 partitions = 3;
}

message GetPartitionGroupsRequest {
}

message GetPartitionGroupsResponse {
    repeated PartitionGroup groups = 1;
}

service PartitionService {

    rpc GetPartitionGroups(GetPartitionGroupsRequest) returns (GetPartitionGroupsResponse) {}

}